# Treebeard

./: .editorconfig  .env.production.example  .gitignore  .pre-commit-config.yaml  API-QUICK-START.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  EPIC-2-DELIVERABLES.md  EPIC-3-SUMMARY.md  EPIC-4-COMPLETE-SUMMARY.md  EPIC-4-DELIVERABLES.md  EPIC-4-FINAL-REPORT.md  EPIC-4-INDEX.md  EPIC-5-COMPLETE.md  EPIC-5-DELIVERABLES.md  EPIC-5-FLOW-DIAGRAM.txt  EPIC-7-ANALYTICS-COMPLETE.md  EPIC-7-COMPLETE.md  EPIC-7-DELIVERABLES.md  EPIC-7-FILES.txt  EPIC-7-MONITORING-COMPLETE.md  EPIC-7-README.md  EPIC-8-COMPLETE.md  EPIC-8-FILES.txt  EPIC-9-SUMMARY.md  FINAL_VALIDATION_SUMMARY.md  FRONTEND-INTEGRATION-GUIDE.md  FRONTEND-ONBOARDING-SUMMARY.md  MONITORING-QUICK-START.md  OPERATIONS_HANDOFF.md  PROJECT_METRICS_REPORT.md  Procfile  QUICKSTART-API.md  RAILWAY_DEPLOYMENT.md  README-ANALYTICS.md  README-RECOMMENDATION-ENGINE.md  README.md  STORY-1.4-COMPLETE.md  STORY-1.4-DELIVERABLES.md  (+13 more)
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: ci.yml
dashboards/: business_intelligence.json  conversion_metrics.json  system_performance.json  user_engagement.json
docs/: ANALYTICS-QUICK-START.md  EPIC-2-IMPLEMENTATION-SUMMARY.md  EPIC-3-COMPLETION-SUMMARY.md  EXPLANATION_SERVICE.md  agent-coordination-guide.md  analytics-integration-examples.md  analytics-setup.md  bmm-workflow-status.yaml  caching-strategy.md  cdn-setup.md  claude-prompts.md  dashboard-guide.md  database-schema.md  execution-plan.md  incident-response.md  metrics-definitions.md  monitoring-setup.md  performance-optimization.md  sprint-plan.md  story-1.1-summary.md  story-1.4-implementation.md  story-2.4-2.5-implementation.md
docs/contracts/: epic-3-api-contract.md  story-1.1-contract.md  story-1.4-contract.md  story-2.2-contract.md  story-2.4-contract.md  story-2.7-contract.md  story-3.2-contract.md  story-6.1-contract.md  story-8.1-8.2-8.3-contract.md  story-8.4-contract.md  story-8.5-8.6-contract.md  story-9.1-9.6-contract.md
docs/runbooks/: cache-failure.md  claude-api-issues.md  database-issues.md  high-error-rate.md  high-latency.md
examples/: usage_analysis_example.py
infrastructure/: alerting-config.yml  cdn-config.yml  monitoring-config.yml
infrastructure/dashboards/: application-performance-dashboard.json  business-metrics-dashboard.json  infrastructure-dashboard.json  service-health-dashboard.json
migrations/: add_performance_indexes.sql
scripts/: analyze_queries.py  init_db.sh  warm_cache.py
sql/: dashboard_queries.sql
src/: test_recommendations_complete.py  test_user_params.py
src/backend/: .env.example  README.md  __init__.py  add_supplier_logos.py  alembic.ini  railway.toml  requirements.txt
src/backend/alembic/: README  env.py
src/backend/api/: README.md  __init__.py  auth_dependencies.py  main.py
src/backend/config/: __init__.py  database.py  settings.py
src/backend/models/: __init__.py  audit_log.py  (+6 more)
src/frontend/: .eslintrc.cjs  .gitignore  .nixpacks  .railwayignore  FILE-MANIFEST.md  FRONTEND-README.md  QUICKSTART.md  README.md  README.onboarding.md  VISUALIZATION-INTEGRATION-GUIDE.md  index.html  package-lock.json  package.json  railway.toml  tailwind.config.js  vite.config.ts
tests/: conftest.py
tests/backend/: conftest.py  test_admin_api.py  test_analytics_service.py  test_audit_logging.py  test_cache_optimization.py  test_cache_service.py  test_cache_warming.py  test_explanation_service.py  test_explanation_templates.py  test_feedback_api.py  test_mvp_flow_api.py  test_recommendation_engine.py  test_risk_detection.py  test_savings_calculator.py  test_scoring_standalone.py  test_usage_analysis.py  test_usage_analysis_standalone.py
tests/integration/: test_api_flow.py  test_epic1_epic2_integration.py  test_recommendation_savings.py
(+183 files in other folders)
